--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ nav button {
 }
 
 main {
-    padding-left: 60px;
+    padding: 0 0 60px 60px;
 }
 
 ul {
@@ -81,10 +81,42 @@ ul li {
     color: green;
 }
 
+.cross {
+    color: red;
+    border: 1px solid red;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 10px;
+    font-weight: bold;
+}
+
 .label {
-    background-color: #45ABEA;
     color: white;
     padding: 8px;
     font-size: 10px;
     border-radius: 10px;
+}
+
+.label.editorial {
+    background-color: #45ABEA;
+}
+
+.label.goals {
+    background-color: #9C72E4;
+}
+
+.label.recruiting {
+    background-color: #64C0A9;
+}
+
+.label.mobile {
+    background-color: #F29E33;
+}
+
+.label.website {
+    background-color: #D863A1;
+}
+
+.label.sales {
+    background-color: #B0C926;
 }
